EliteK9/Css/Schedule.css
#descriptionLink {
    margin-top: 20px;
}

.pageTitle {
    color: #ffa500;
    font-weight: bold;
    font-size: 30px;
    margin-bottom: 20px;
    text-align: center;
    margin-top: 30px;
    margin-bottom: 40px;
}

iframe{
    width: 100%;
    height: 100%;
    margin-bottom: 15px;
}

.embeddedCalendar {
    height: 400px;
}

.emailForm{
    /*margin: 0px;*/
    margin-bottom: 200px;
}

.emailBg {
  
}

.emailImage {
    margin-right: 20px;
    margin-bottom: 50px;
    border: 3px solid #ffa500;
}

.rowSpace{
    margin-bottom:30px;
}

.form-horizontal .control-label {
    text-align: left;
    margin: 0px;
}

.messageBox {
    min-height: 120px;
}


hr{
    visibility: hidden;
}

#formLine {
    visibility: visible;
}

#submitForm{
    margin-bottom: 100px;
}

.emailSent {
    font-weight: bold;
    color: #ffa500;
}

